--- a/package.json
+++ b/package.json
@@ -8,5 +8,14 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "body-parser": "^1.18.2",
+    "express": "^4.16.2",
+    "jimp": "^0.2.28",
+    "json-patch": "^0.7.0",
+    "jsonwebtoken": "^8.1.1",
+    "mongoose": "^5.0.2",
+    "morgan": "^1.9.0"
+  }
 }
