--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "social-cops",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js",
+    "test": "nyc mocha"
   },
   "keywords": [],
   "author": "",
@@ -17,5 +18,11 @@
     "jsonwebtoken": "^8.1.1",
     "mongoose": "^5.0.2",
     "morgan": "^1.9.0"
+  },
+  "devDependencies": {
+    "chai": "^4.1.2",
+    "chai-http": "^3.0.0",
+    "mocha": "^5.0.0",
+    "nyc": "^11.4.1"
   }
 }
