--- a/package.json
+++ b/package.json
@@ -16,12 +16,12 @@
     "jimp": "^0.2.28",
     "json-patch": "^0.7.0",
     "jsonwebtoken": "^8.1.1",
-    "mongoose": "^5.0.2",
     "morgan": "^1.9.0"
   },
   "devDependencies": {
     "chai": "^4.1.2",
     "chai-http": "^3.0.0",
+    "eslint": "^4.16.0",
     "mocha": "^5.0.0",
     "nyc": "^11.4.1"
   }
